Fix LibertumEcosystem spacing

--- a/app/(routes)/ecosystem/thelibertum/theLibertumEcosystem.module.css
+++ b/app/(routes)/ecosystem/thelibertum/theLibertumEcosystem.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   max-width: 75.125rem;
   margin: 2rem auto;
-  gap: 4rem;
+  gap: 2rem;
 }
 
 .title {
@@ -85,6 +85,9 @@
 }
 
 @media screen and (max-width: 1100px) {
+  .container {
+    gap: 4rem;
+  }
   .ecosystemGraph {
     display: none;
   }
